--- a/force-app/main/default/classes/ClassesObjectsMethods.cls
+++ b/force-app/main/default/classes/ClassesObjectsMethods.cls
@@ -4,7 +4,7 @@
  *
  * This class introduces developers to the concept of creating and manipulating objects in Apex. It discusses
  * how to define classes, create methods, and use objects. This class uses two example classes - Person and Book.
- * 
+ *
  * Topics covered in this class include:
  * - Understanding how to define a class in Apex.
  * - Understanding how to create methods in Apex.
@@ -13,13 +13,13 @@
  *
  * Users of this class can expect to gain a strong understanding of Object Oriented Programming in Apex and
  * be prepared for more advanced topics in Salesforce development.
- * 
+ *
  * The Person class is a simple representation of a person with properties like name and age, and a method
  * that allows the person to introduce themselves.
- * 
+ *
  * The Book class is a simple representation of a book with properties like title and author, and methods
  * to read and close the book.
- * 
+ *
  * Resources:
  * String class: https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_string.htm
  * Date class: https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_date.htm
@@ -42,7 +42,7 @@ public with sharing class ClassesObjectsMethods {
         // Initialize a String with 'Hello, Salesforce!'
         String hello = 'Hello, Salesforce!';
         
-        // Get the length of the String        
+        // Get the length of the String
         // Get a substring of the String of the first 5 characters
         // Convert the String to lower case
         List<String> resList = new List<String>{
@@ -55,10 +55,10 @@ public with sharing class ClassesObjectsMethods {
         // In the first position add the string length
         // In the second position add the substring
         // In the third position add the string in lower case
-
+        
         return resList; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 2
      * Check if the input string starts with 'Sales', ends with 'Force', and contains 'Awesome'.
@@ -81,7 +81,7 @@ public with sharing class ClassesObjectsMethods {
         
         return resList; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 3
      * Take a sentence then remove any duplicate words, and return the sentence with only unique words.
@@ -92,20 +92,20 @@ public with sharing class ClassesObjectsMethods {
     public static String removeDuplicateWords(String sentence) {
         // Split the sentence into words
         List<String> wordList = sentence.split(' ');
-
+        
         // Create a set to store the unique words
         Set<String> wordSet = new Set<String>();
-
+        
         // Add each word to the set
         wordSet.addAll(wordList);
-
+        
         // Join the unique words back into a sentence
         String result = String.join(wordSet, ' ');
-
+        
         // Return the sentence with unique words
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 4
      * This method takes a string as a parameter, and calculates the number of vowels in the string.
@@ -117,9 +117,9 @@ public with sharing class ClassesObjectsMethods {
     public static Integer countVowels(String str) {
         // Initialize the result Integer
         Integer result = 0;
-
+        
         if (String.isBlank(str)) { return result; }
-
+        
         for (String s : str.split('')) {
             // get individual characters from the string - hint use substring or split
             // check if the character is a vowel
@@ -127,10 +127,10 @@ public with sharing class ClassesObjectsMethods {
             if (s.containsAny('aeiouAEIOU')) { result++; }
         }
         
-
+        
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 5
      * Given a list of scientist names, combine their names together with a comma if it contains the letter 'g'.
@@ -141,25 +141,25 @@ public with sharing class ClassesObjectsMethods {
     public static String findTheScientist() {
         // The list of scientists' names
         List<String> scientistNames = new List<String>{'Tim Berners-Lee', 'Alan Turing', 'Grace Hopper', 'Donald Knuth', 'Guido van Rossum', 'Ken Thompson', 'Stephen Hawking'};
-
+        
         // The variable to store the concatenated string
         String result = '';
-
+        
         // Loop through the list of scientists' names
         for (String s : scientistNames) {
             if (s.containsIgnoreCase('g')) { result += s + ','; }
         }
-
-            // If the name doesn't contain the letter 'G', skip this iteration
-
-            // Add the name to the result string, followed by a comma
-
+        
+        // If the name doesn't contain the letter 'G', skip this iteration
+        
+        // Add the name to the result string, followed by a comma
+        
         // Remove the last comma from the result string
         result = result.left(result.length()-1);
-
+        
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 6
      * This method calculates the absolute value of the difference between of two input numbers that are raised to the 2nd power.
@@ -172,14 +172,14 @@ public with sharing class ClassesObjectsMethods {
         // Square the input numbers using the Math.pow() function
         Double a2 = Math.pow(a, 2);
         Double b2 = Math.pow(b, 2);
-
+        
         // Calculate the absolute difference using Math.abs() function
         Double result = Math.abs(a2 - b2);
-
+        
         // Return the result
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 7
      * Generate a random number between 50 and 100
@@ -189,11 +189,11 @@ public with sharing class ClassesObjectsMethods {
     public static Integer generateRandomNumber() {
         // Use Math class to generate number between 50 and 100
         Integer result = (Integer) Math.random() * 50 + 50;
-
+        
         // Return the random integer
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 8
      * Format the current date in the current user locale format.
@@ -203,14 +203,14 @@ public with sharing class ClassesObjectsMethods {
     public static String getCurrentDate() {
         // Get the todays date
         Date today = Date.today();
-
+        
         // Format the current date
         String result = today.format();
-
+        
         // Return the result
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 9
      * Given a date time return the day of the week in number format
@@ -229,18 +229,18 @@ public with sharing class ClassesObjectsMethods {
             'Saturday' => '6',
             'Sunday' => '7'
         };
-
+        
         // Get the day name using .format('EEEE');
         String dayName = dt.format('EEEE');
-
+        
         // Get the day number from the map using the day name
         String result = weekDayMap.get(dayName);
-
+        
         // Return the result as a string
         return result; // Replace null with the variable you used to store the result
     }
-
-
+    
+    
     /**
      * Question 10
      * Calculate the difference between the years of two dates
@@ -252,16 +252,16 @@ public with sharing class ClassesObjectsMethods {
      */
     public static Integer calculateYearDifference(Date d1, Date d2) {
         if (d1 == null || d2 == null) { return null; }
-
+        
         // Subtract the difference in years
         Integer result = Math.abs(d1.year() - d2.year());
-
+        
         return result; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 11
-     * The Book class represents a book in a library. 
+     * The Book class represents a book in a library.
      * Each Book object has a title and an author, and methods to return these details.
      * This class can be used in the context of a library management system, bookstore, etc.
      * where you need to manipulate and manage book information.
@@ -274,14 +274,14 @@ public with sharing class ClassesObjectsMethods {
         public String author;
         // pages
         public Integer pages;
-    
+        
         // Book constructor to initialize the title and author
         public Book(String title, String author) {
             // Initialize the title and author
             this.title = title;
             this.author = author;
         }
-    
+        
         // Method that returns the details of the book
         public String getBookDetails() {
             // return A string containing the details of the book in the format "Title: <title>, Author: <author>"
@@ -289,7 +289,7 @@ public with sharing class ClassesObjectsMethods {
         }
     }
     
-
+    
     /**
      * Question 12
      * Create a Book object and returns the details of the book.
@@ -300,15 +300,15 @@ public with sharing class ClassesObjectsMethods {
         // Create a Book object with title "A Brief History of Time" and author "Stephen Hawking"
         Book b = new Book(
             'A Brief History of Time',
-            'Stephen Hawking'
-        );
-
+        'Stephen Hawking'
+            );
+        
         // Call the getBookDetails method on the book object to get the details of the book
-
+        
         // Return the details of the book
         return b.getBookDetails(); // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 13
      * Create and update two Book objects and returns the books.
@@ -321,31 +321,31 @@ public with sharing class ClassesObjectsMethods {
     public static List<Book> generateBookList(Book myBook1) {
         // Create a list of books
         List<Book> books = new List<Book>();
-
+        
         // Update the title and author of myBook1
         myBook1.author = 'J.K. Rowling';
         myBook1.title = 'Harry Potter and the Chamber of Secrets';
-
+        
         // Update the pages for myBook1 to 352
         myBook1.pages = 352;
-
+        
         // Create a new Book object with title "A Brief History of Time" and author "Stephen Hawking"
         Book b = new Book(
             'A Brief History of Time',
-            'Stephen Hawking'
-        );
-
+        'Stephen Hawking'
+            );
+        
         // Update the pages for A Brief History of Time to 256
         b.pages = 256;
-
+        
         // Add the book to the list
         books.add(myBook1);
         books.add(b);
         
-        return books; // Replace null with the variable you used to store the result      
+        return books; // Replace null with the variable you used to store the result
     }
-
-
+    
+    
     /**
      * Question 14
      * The Person class represents a person.
@@ -359,63 +359,82 @@ public with sharing class ClassesObjectsMethods {
         private Integer age;
         
         // Constructor to initialize the name and age
+        /**
+         * @pram name The name of the person.
+         * @pram age The age of the person.
+         */
         public Person(String name, Integer age) {
             this.name = name;
             this.age = age;
         }
-    
-        // Method introduceYourself that returns the details of the person        
+        
+        // Method introduceYourself that returns the details of the person
         // Return a string in the format "Hello, my name is <name> and I am <age> years old."
         // For example, introduceYourself() should return a string like "Hello, my name is John Doe and I am 28 years old."
+        /**
+         * @return A string containing the details of the person.
+         */
         public String introduceYourself() {
             return 'Hello, my name is ' + name + ' and I am ' + age + ' years old.';
         }
-
+        
         // Getter method that returns the name of the person
+        /**
+         * @return The name of the person.
+         */
         public String getName() {
             return name;
         }
         // Getter method that returns the age of the person
+        /**
+         * @return The age of the person.
+         */
         public Integer getAge() {
             return age;
         }
-
+        
         // Setter method that sets the name of the person
+        /**
+         * @param name The name of the person.
+         */
         public void setName(String name) {
             this.name = name;
         }
-
+        
         // Setter method that sets the age of the person
+        /**
+         * @param age The age of the person.
+         */
         public void setAge(Integer age) {
             this.age = age;
         }
     }
-
+    
     /**
      * Question 15
      * Create a Person object and returns the details of the person.
      * For example, personDetails() should return a list like ["Hello, my name is John Doe and I am 28 years old.", "John Doe", "28"].
      * @return A string containing the details of the person.
      */
-
+    
     public static List<String> personDetails() {
         List<String> results = new List<String>();
         // Create a new instance of Person class
         // Name the person 'John Doe' and set the age to 28
         Person p = new Person('John Doe', 28);
-
+        
         // Add the details of the person using the introduceYourself method
         results.add(p.introduceYourself());
-
+        
         // Get the name of the person using the getter method and add it to the list
         results.add(p.name);
-
+        
         // Get the age of the person using the getter method and add it to the list
         results.add(p.age.format());
         
         return results; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 16
      * Create a Person object with the provided name and age.
@@ -426,17 +445,17 @@ public with sharing class ClassesObjectsMethods {
     public static Person createPerson(String name, Integer age) {
         // Create a new instance of the Person class using the provided name and age
         Person p = new Person(name, age);
-
+        
         // Return the new instance of the Person class
-
+        
         return p; // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 17
      * Create a method that constructs multiple Person objects.
      * You are to create a new Person object for each name in the provided List<String> of names,
-     * using the same age for all Person objects. The method should return a List<Person> of all the Person objects created. 
+     * using the same age for all Person objects. The method should return a List<Person> of all the Person objects created.
      * @param names A list of names.
      * @param age The age to be set for all the Person objects.
      * @return A list of new Person objects.
@@ -444,20 +463,20 @@ public with sharing class ClassesObjectsMethods {
     public static List<Person> createMultiplePersons(List<String> names, Integer age) {
         List<Person> people = new List<Person>();
         // Loop through each name in the provided list of names
-            // Create a new Person object for each name
-            
-            // Add the new Person object to the list of Person objects
+        // Create a new Person object for each name
+        
+        // Add the new Person object to the list of Person objects
         for (String name : names) {
             people.add(
                 new Person(name, age)
-            );
+                );
         }
         
         // Return the list of Person objects
         return people; // Replace null with the variable you used to store the result
     }
-
-
+    
+    
     /**
      * Question 18
      * Compare two Person objects based on their ages.
